--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,12 @@ h1 {
 	line-height: 1.5;
 }
 
+h2 {
+	margin-top: 1.5rem;
+	font-size: 1.5rem;
+	line-height: 1.5;
+}
+
 .description {
 	margin-top: 2rem;
 	font-size: 1rem;
