--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,23 @@
 @font-face {
-  font-family: Spectral;
-  src: url(./assets/fonts/Spectral-Regular.ttf);
+  	font-family: Spectral;
+  	src: url(./assets/fonts/Spectral-Regular.ttf);
 }
 
 @font-face {
-  font-family: Spectral;
-  src: url(./assets/fonts/Spectral-Bold.ttf);
+	font-family: Spectral;
+	src: url(./assets/fonts/Spectral-Bold.ttf);
 	font-weight: bolder;
 }
 
 @font-face {
-  font-family: Spectral;
-  src: url(./assets/fonts/Spectral-ExtraBold.ttf);
+	font-family: Spectral;
+	src: url(./assets/fonts/Spectral-ExtraBold.ttf);
 	font-weight: bold;
 }
 
 @font-face {
-  font-family: Spectral;
-  src: url(./assets/fonts/Spectral-Light.ttf);
+	font-family: Spectral;
+	src: url(./assets/fonts/Spectral-Light.ttf);
 	font-weight: lighter;
 }
 
@@ -36,25 +36,19 @@
 body {
 	background-color: var(--light);
 	background-image: linear-gradient(160deg, var(--dark) 0%, var(--light) 100%);
-	font-family: Spectral, Georgia, serif
+	font-family: Spectral, Georgia, serif;
+	min-height: 100dvh;
 }
 
 main {
-	display: relative;
+	position: relative;
 	max-width: 40rem;
 	width: 100vw;
-	height: 100vh;
 	margin: 0 auto;
 	padding: 2rem;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-}
-
-.profile-image {
-	width: 8rem;
-	border-radius: 0.75rem;
-	box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
 }
 
 h1 {
@@ -67,6 +61,12 @@ h2 {
 	margin-top: 1.5rem;
 	font-size: 1.5rem;
 	line-height: 1.5;
+}
+
+.profile-image {
+	width: 8rem;
+	border-radius: 0.75rem;
+	box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
 }
 
 .description {
@@ -116,18 +116,17 @@ h2 {
 }
 
 @media (prefers-color-scheme: dark) {
-  body{
+	body {
 		background-color: var(--dark);
 		background-image: linear-gradient(160deg, var(--dark) 0%, var(--light) 100%);
-    color: white
+		color: white;
   }
-
 }
 
 @media (prefers-color-scheme: light) {
-  body{
-    background-color: var(--light);
+	body {
+		background-color: var(--light);
 		background-image: linear-gradient(160deg, var(--light) 0%, white 100%);
-    color: var(--dark);
-  }
+		color: var(--dark);
+	}
 }
